# swagger/swagger.json
@@ -15,6 +15,157 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "description": "Logs user into the system",
+                "operationId": "AuthController.Login",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for user content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{int} body models.User"
+                    },
+                    "400": {
+                        "description": "Login failed"
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "description": "Register users",
+                "operationId": "AuthController.Register",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for user content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{int} body models.User"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/categories/": {
+            "get": {
+                "tags": [
+                    "categories"
+                ],
+                "description": "get category",
+                "operationId": "CategoryController.GetAll",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Category"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "categories"
+                ],
+                "description": "create category",
+                "operationId": "CategoryController.Create",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for category content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Category"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{int} models.Category.Id"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/categories/{id}": {
+            "get": {
+                "tags": [
+                    "categories"
+                ],
+                "description": "get category by id",
+                "operationId": "CategoryController.Get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Category"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            }
+        },
         "/post/": {
             "get": {
                 "tags": [
@@ -129,62 +280,6 @@
                     }
                 }
             }
-        },
-        "/user/login": {
-            "post": {
-                "tags": [
-                    "user"
-                ],
-                "description": "create users",
-                "operationId": "UserController.CreateUser",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for user content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dtos.Login"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{int} body models.User"
-                    },
-                    "400": {
-                        "description": "Login failed"
-                    }
-                }
-            }
-        },
-        "/user/register": {
-            "post": {
-                "tags": [
-                    "user"
-                ],
-                "description": "create users",
-                "operationId": "UserController.CreateUser",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for user content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dtos.Login"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{int} body models.User"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -216,6 +311,28 @@
                 }
             }
         },
+        "models.Category": {
+            "title": "Category",
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "posts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Post"
+                    }
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Post": {
             "title": "Post",
             "type": "object",
@@ -235,6 +352,25 @@
                 }
             }
         },
+        "models.Token": {
+            "title": "Token",
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
         "models.User": {
             "title": "User",
             "type": "object",
@@ -247,6 +383,12 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Post"
+                    }
+                },
+                "token": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Token"
                     }
                 },
                 "username": {
